app/assets/stylesheets/taxs.scss
@import 'govuk/_grid_layout.scss';
@import 'govuk/_conditionals.scss';
@import 'govuk/_colours.scss';
@import 'govuk/_typography.scss';
@import 'govuk/_helpers.scss';
@import 'govuk/_panels.scss';
@import 'govuk/design-patterns/_buttons.scss';
@import 'govuk/design-patterns/_alpha-beta.scss';
@import 'govuk/design-patterns/focus';
@import 'govuk/design-patterns/palette';
@import 'bar-chart/_bar-chart.scss';

/*= Variables
----------------------------------------------*/
$page-width: 960;
$phase: beta;
$assets_path: /annual-tax-summary/assets/images;

/*= Mixins
----------------------------------------------*/
@mixin column($num-cols) {

  float: none;
  margin-bottom: $gutter / 2;
  padding-right: 0;
  width: auto;
  max-width: 100%;
  
  @include ie-lte(8) {
    width: 100%;
  }

  /* Reset columns if on a tablet/mobile device */
  @include media(false, false, 977px) {
    float: left;
    margin-bottom: $gutter;
    padding-right: $gutter;
    width: ($page-width / $num-cols) - ($gutter * 2);
  }
}
@mixin inline-block() {
  display: inline-block;
  *display: inline;
  zoom: 1;
}

/*= Header styles
----------------------------------------------*/
#global-header {
  #logo {
    width: 165px;
  }
  .header-message {

    float: right;
    margin: .65rem 0;
    color: $white;
    
    p {
      margin: 0;
    }
  }
}
#global-breadcrumb {
  
  margin: 0 auto;
  max-width: 1020px;
  background-color: $white;
  z-index: 50;

  ol {

    margin: 0 $gutter;
    margin: 0;
    padding: 0.75em 0 0;
    max-width: 960px;

    li {

      @include core-16;

      margin-left: 0;
      margin-right: 0.5em;
      margin-bottom: 0.4em;
      padding-right: 1em;
      background-image: url("#{$assets_path}/separator.png");
      background-position: 100% 50%;
      background-repeat: no-repeat;
      float: left;
      list-style: none;

      &:last-child {
        margin-right: 0;
        background-image: none;
      }

      a {
        @include core-16;
        color: $black;
      }

      strong {
        font-weight: normal;
      }
      
    }
  }
}

.phase-tag {
  @include phase-tag($phase);
}

/*= Main styles
----------------------------------------------*/
main, section, article, aside {
  display: block;
}
#global-cookie-message {
  p {
    margin: 0 auto;
    max-width: ($page-width)px;
    
    @include ie-lte(8) {
      width: ($page-width)px;
    }
  }
}
#wrapper {
  
  #content {

    .phase-banner {

      @include phase-banner($phase);

      padding: $gutter-half;

      p {
        margin: 0;
      }

      a {
        color: $black;
      }
    }

    article p:first-child {
      margin-top: 5px;
      margin-bottom: 20px;
    }

    section {
      margin-bottom: $gutter / 2;
    }
    
    .back {
      @include core-19;
      margin-bottom: $gutter-half;
      padding-top: $gutter;
    }

    @include media(desktop) {
      section {
        margin-bottom: $gutter;
      }
    }
    
    .info-notice {
      margin-bottom: 16px;
      padding: 10px 0 10px 20px;
      background: none;
      border-left: 5px solid $panel-colour;

      p {
        margin: 0;
      }
    }

    .page-header {
      #english-switch, #welsh-switch {
        float: right;
      }
      #user-info {
        float: right;
        text-align: right;
      }
      h1 {
        clear: right;
      }
    }
  }
}

/*= Footer styles
----------------------------------------------*/
#footer {
  margin-top: $gutter;
  a {
    @include core-16;
  }
}
@include media(desktop) {
  #footer {
    margin-top: $gutter / 2;
  }
}

/*= Headings and text styles
----------------------------------------------*/
h1 {
  @include heading-48;
  margin: 0;
  padding: 25px 0 15px !important;
}
h2, article h2 {
  @include bold-36;
  margin-top: $gutter + $gutter-half;
  margin-bottom: 20px;
}
h3 {
  @include heading-24;
}
h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}
section[id] {
  h1, h2, h3, h4, h5, h6 {
    margin-top: 55px;
    padding: 0;
  }
}
p {
  @include core-19;
}
p.lede {
  @include core-24;
  margin: 0 0 $gutter 0;
  width: 75%;
}
article p.lede {
    width: 100%;
}
.no-bold {
  font-weight: normal;
}
.bold-xlarge {
  @include bold-48;
  margin: 0;
}
.bold-small {
  @include bold-16;
  margin-top: 0;
}
a {
  .bold-small {
    text-decoration: underline;
  }
}
.bold-xlarge + .bold-small {
  margin-top: 0;
}
.bold-xlarge + p, .bold-small + p {
  margin {
    top: 5px;
    bottom: 20px;
  }
}
a.data-link {
  & + p {
    margin-top: 5px;
    margin-bottom: 20px;
  }
}
a.mc-toggle-link {
  @include core-19;
}
strong, b {
  font-weight: 600;
}

/*= Form element/button styles
----------------------------------------------*/
*[role="button"],
button,
input[type="submit"] {
  @include button;
  margin-bottom: $gutter / 2 !important;
  width: auto;
  &:focus {
    outline: 3px solid $yellow;
  }
}
img + button,
img + input[type="submit"] {
  margin: $gutter 0;
}
.label-inline {
  @include inline-block;
}
.form-label-bold {
  @include heading-24;
  font-weight: 700;
}
input[type="text"],
input[type="email"] {
  display: block;
  padding: 0.1em 0 0.1em 0.4em;
  background-color: $grey-4;
  border: 1px inset $grey-2;
  font-size: 19px;
  line-height: 1.2;
}
input[type="submit"] {
  display: block;
}
fieldset {
  margin-bottom: $gutter / 2;
}
.form-field {
  margin-bottom: $gutter / 2;
}

/*= Tables
----------------------------------------------*/
article table {

  @include core-19;

  width: $full-width;
  margin-bottom: $gutter-half !important;
  margin-top: 30px;
  border-collapse: collapse;

  td { 
    @include core-19;
  }

  thead th[colspan],
  thead th:nth-child(2),
  tfoot th:nth-child(2) {
    @include core-19;
    font-weight: normal;
  }

  thead {
    th {
      text-align: left;
    }
    th[colspan],
    td + th,
    th + th {
      padding-right: $gutter;
      text-align: right;
    }
  }
  tbody {
    th[colspan="2"],
    th[colspan="3"] {
      padding-top: 48px;
    }
  }
  tfoot {
    th {
      text-align: left;
    }
    th, td {
      @include bold-24;
      padding-top: 70px;
      padding-bottom: $gutter-half;
      border-bottom: 1px solid #bfc1c3;
    }
    th + td {
      padding-right: $gutter;
      text-align: right;
    }
    .no-bold {
      font-size: 100%;
    }
  }
  th {
    @include bold-24;
  }
  th {
    text-align: left;
  }
  th, td {
    padding: $gutter-half $gutter-half $gutter-half 0;
    border: {
      top: 0;
      right: 0;
      bottom: 1px solid $border-colour;
      left: 0;
    }
    background: none;
    background-color: $page-colour;
  }
  td + td {
    padding-right: $gutter;
    text-align: right;
  }
  @include media(tablet) {
    &.others {
      vertical-align: top;

      td + td {
        line-height: 1;
        padding-top: 3px;
      }
    }
  }
}

#tax-summary, #tax-spent {
  h2 {
    @include bold-24;
    padding: 6px 0 9px 0;
    margin: 0;
  }
  p {
    margin-top: 0;
  }
}

/*= Tax summary index page
----------------------------------------------*/
#taxable-income,
#tax-calculated-as,
#tax-free-amount,
#capital-gains {
  a {
    @include inline-block;
    text-decoration: none;
    overflow: hidden;
  }
}

/*= Tax summary Magna charta
----------------------------------------------*/
.mc-chart {
  @include core-19;
  border-spacing: 0 5px;
}
.mc-key-cell {
  padding-right: 20px !important;
  width: 60% !important;
}
.mc-bar-cell {
  border: 2px solid #296969 !important;
  font-weight: 700;
  span {
    width: 150px !important;
  }
}
.gray {
  color: $secondary-text-colour !important;
  font-weight: normal;
}

/*= Year heading styles
----------------------------------------------*/
.heading-secondary {
  color: $secondary-text-colour;
  font-weight: 400;
  display: block;
}

